--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "edgedb": "^1.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "lodash": "^4.17.21",
+    "midievents": "^2.0.0",
+    "midifile": "^2.0.0",
     "path": "^0.12.7",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.32.1",
@@ -41,6 +43,7 @@
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.16.3",
     "@types/workerpool": "^6.4.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
