--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Module for scanning a Clone Hero Songs folder to identify charts and extract metadata",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/test.ts"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,10 @@
   "homepage": "https://github.com/Geomitron/scan-chart#readme",
   "dependencies": {
     "@nestjs/common": "^9.4.0",
+    "bottleneck": "^2.19.5",
     "charset-detector": "^0.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "crypto": "^1.0.1",
     "edgedb": "^1.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "lodash": "^4.17.21",
@@ -35,14 +35,30 @@
     "path": "^0.12.7",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.32.1",
+    "stream-audio-fingerprint": "git+https://github.com/Geomitron/stream-audio-fingerprint.git",
     "workerpool": "^6.4.0"
   },
   "devDependencies": {
+    "@angular-eslint/builder": "^16.0.2",
+    "@angular-eslint/eslint-plugin": "^16.0.2",
+    "@angular-eslint/eslint-plugin-template": "^16.0.2",
+    "@angular-eslint/schematics": "^16.0.2",
+    "@angular-eslint/template-parser": "^16.0.2",
     "@types/charset-detector": "^0.0.1",
     "@types/fluent-ffmpeg": "^2.1.21",
     "@types/lodash": "^4.14.194",
-    "@types/node": "^18.16.3",
+    "@types/node": "^18.16.16",
     "@types/workerpool": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^44.2.7",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8",
+    "prettier-eslint": "^15.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
