--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "scan-chart",
-  "version": "0.0.1",
-  "description": "Module for scanning a Clone Hero Songs folder to identify charts and extract metadata",
+  "version": "1.0.0",
+  "author": "Geo",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "description": "A library that scans charts for rhythm games like Clone Hero.",
   "scripts": {
-    "start": "ts-node src/test.ts"
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "release": "pnpm run build && changeset publish",
+    "lint": "tsc"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/Geomitron/scan-chart.git"
   },
-  "keywords": [
-    "clonehero",
-    "songs",
-    "charts",
-    "scan"
-  ],
-  "author": "Geomitron",
-  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/Geomitron/scan-chart/issues"
   },
@@ -44,6 +43,7 @@
     "@angular-eslint/eslint-plugin-template": "^16.0.2",
     "@angular-eslint/schematics": "^16.0.2",
     "@angular-eslint/template-parser": "^16.0.2",
+    "@changesets/cli": "^2.26.1",
     "@types/charset-detector": "^0.0.1",
     "@types/fluent-ffmpeg": "^2.1.21",
     "@types/lodash": "^4.14.194",
@@ -60,6 +60,7 @@
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "ts-node": "^10.9.1",
+    "tsup": "^6.7.0",
     "typescript": "^4.7.4"
   }
 }
