--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "target": "es2016",
+    "module": "CommonJS",
+		"esModuleInterop": true,
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-    "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
@@ -21,5 +21,6 @@
     "noFallthroughCasesInSwitch": true,
 		"typeRoots": ["src/@types"],
 		"noErrorTruncation": true,
+    "noEmit": true
   }
 }
