--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "A library that scans charts for rhythm games like Clone Hero.",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
+		"test": "tsx src/test.ts",
     "release": "pnpm run build && changeset publish",
     "lint": "tsc"
   },
@@ -27,6 +28,7 @@
     "lodash": "^4.17.21",
     "midievents": "^2.0.0",
     "midifile": "^2.0.0",
+    "parse-sng": "^2.0.0",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.32.1",
     "stream-audio-fingerprint": "git+https://github.com/Geomitron/stream-audio-fingerprint.git",
@@ -54,8 +56,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
-    "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
+    "tsx": "^3.12.8",
     "typescript": "^4.7.4"
   }
 }
