--- a/package.json
+++ b/package.json
@@ -1,63 +1,61 @@
 {
-  "name": "scan-chart",
-  "version": "3.4.8",
-  "author": "Geo",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "description": "A library that scans charts for rhythm games like Clone Hero.",
-  "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "test": "tsx src/test.ts",
-    "release": "pnpm run build && changeset publish",
-    "lint": "tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/Geomitron/scan-chart.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Geomitron/scan-chart/issues"
-  },
-  "homepage": "https://github.com/Geomitron/scan-chart#readme",
-  "dependencies": {
-    "bottleneck": "^2.19.5",
-    "charset-detector": "^0.0.2",
-    "fluent-ffmpeg": "^2.1.2",
-    "lodash": "^4.17.21",
-    "midievents": "^2.0.0",
-    "midifile": "^2.0.0",
-    "parse-sng": "^3.1.2",
-    "sanitize-filename": "^1.6.3",
-    "sharp": "^0.32.1",
-    "stream-audio-fingerprint": "git+https://github.com/Geomitron/stream-audio-fingerprint.git",
-    "workerpool": "^6.4.0"
-  },
-  "devDependencies": {
-    "@angular-eslint/builder": "^16.0.2",
-    "@angular-eslint/eslint-plugin": "^16.0.2",
-    "@angular-eslint/eslint-plugin-template": "^16.0.2",
-    "@angular-eslint/schematics": "^16.0.2",
-    "@angular-eslint/template-parser": "^16.0.2",
-    "@changesets/cli": "^2.26.1",
-    "@types/charset-detector": "^0.0.1",
-    "@types/fluent-ffmpeg": "^2.1.21",
-    "@types/lodash": "^4.14.194",
-    "@types/node": "^18.16.16",
-    "@types/workerpool": "^6.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^44.2.7",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8",
-    "prettier-eslint": "^15.0.1",
-    "tsup": "^6.7.0",
-    "tsx": "^3.12.8",
-    "typescript": "^4.7.4"
-  }
+	"name": "scan-chart",
+	"version": "3.4.8",
+	"author": "Geo",
+	"license": "MIT",
+	"main": "dist/index.js",
+	"module": "dist/index.mjs",
+	"types": "dist/index.d.ts",
+	"description": "A library that scans charts for rhythm games like Clone Hero.",
+	"scripts": {
+		"build": "tsup src/index.ts --format cjs,esm --dts",
+		"release": "pnpm run build && changeset publish",
+		"lint": "tsc"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/Geomitron/scan-chart.git"
+	},
+	"bugs": {
+		"url": "https://github.com/Geomitron/scan-chart/issues"
+	},
+	"homepage": "https://github.com/Geomitron/scan-chart#readme",
+	"dependencies": {
+		"@noble/hashes": "^1.4.0",
+		"bottleneck": "^2.19.5",
+		"exifreader": "^4.23.2",
+		"fluent-ffmpeg": "^2.1.2",
+		"js-md5": "^0.8.3",
+		"lodash": "^4.17.21",
+		"midi-file": "^1.2.4",
+		"rfc4648": "^1.5.3",
+		"stream-audio-fingerprint": "git+https://github.com/Geomitron/stream-audio-fingerprint.git",
+		"workerpool": "^6.4.0"
+	},
+	"devDependencies": {
+		"@angular-eslint/builder": "^17.4.0",
+		"@angular-eslint/eslint-plugin": "^17.4.0",
+		"@angular-eslint/eslint-plugin-template": "^17.4.0",
+		"@angular-eslint/schematics": "^17.4.0",
+		"@angular-eslint/template-parser": "^17.4.0",
+		"@changesets/cli": "^2.26.1",
+		"@types/charset-detector": "^0.0.1",
+		"@types/fluent-ffmpeg": "^2.1.21",
+		"@types/js-md5": "^0.7.2",
+		"@types/lodash": "^4.14.194",
+		"@types/node": "^18.16.16",
+		"@types/workerpool": "^6.4.0",
+		"@typescript-eslint/eslint-plugin": "^7.8.0",
+		"@typescript-eslint/parser": "^7.8.0",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jsdoc": "^48.2.4",
+		"eslint-plugin-prefer-arrow": "^1.2.3",
+		"eslint-plugin-prettier": "^5.1.3",
+		"prettier": "^3.2.5",
+		"prettier-eslint": "^16.3.0",
+		"tsup": "^6.7.0",
+		"typescript": "^4.7.4"
+	}
 }
