--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 	"description": "A library that scans charts for rhythm games like Clone Hero.",
 	"scripts": {
 		"build": "tsup src/index.ts --format cjs,esm --dts",
+		"test": "tsx src/test.ts",
+		"test-inspect": "tsx --inspect src/test.ts",
 		"release": "pnpm run build && changeset publish",
 		"lint": "tsc"
 	},
@@ -29,6 +31,7 @@
 		"lodash": "^4.17.21",
 		"midi-file": "^1.2.4",
 		"rfc4648": "^1.5.3",
+		"sanitize-filename": "^1.6.3",
 		"stream-audio-fingerprint": "git+https://github.com/Geomitron/stream-audio-fingerprint.git",
 		"workerpool": "^6.4.0"
 	},
@@ -56,6 +59,7 @@
 		"prettier": "^3.2.5",
 		"prettier-eslint": "^16.3.0",
 		"tsup": "^6.7.0",
+		"tsx": "^4.15.7",
 		"typescript": "^4.7.4"
 	}
 }
